--- a/assets/css/design-trends.css
+++ b/assets/css/design-trends.css
@@ -320,7 +320,7 @@ body {
 
 .final-content h2 {
   font-size: clamp(2.5rem, 6vw, 4rem);
-  color: white;
+  color: rgb(255, 255, 255);
   margin-bottom: 1rem;
 }
 
