--- a/assets/css/types.css
+++ b/assets/css/types.css
@@ -1,6 +1,11 @@
 @font-face {
-  font-family: "OCR-A";
-  src: url("../fonts/OCRA.woff2") format("woff2");
+  font-family: "Tagesschrift", system-ui;
+  src: url("../fonts/Tagesschrift.woff2") format("woff2");
   font-weight: normal;
+  font-style: normal;
+}
+.tagesschrift-regular {
+  font-family: "Tagesschrift", system-ui;
+  font-weight: 400;
   font-style: normal;
 }
